--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,51 @@
-.container {
-  padding: 0 2rem;
+/* HOME */
+
+.lColumn 
+{
+  float: left;
+  width: 50%;
 }
 
+/* Clear floats after the columns */
+.lRow:after 
+{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.lImg
+{
+  margin-top: 25vh;
+}
+
+.lTitle
+{
+  color: white;
+  font-size: 3.5rem;
+  font-weight: bold;
+  margin-top: 35vh;
+  margin-left: 3vw;
+}
+
+.lPara
+{
+  color: white;
+  font-size: 1.5rem;
+  margin-left: 7vw;
+  margin-bottom: 5vh;
+}
+
+.lSign
+{
+  color: rgb(0, 0, 0);
+  width: 25vw;
+  font-size: 1.5rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  padding: 15px;
+  margin-left: 19vw;
+}
 
 
 @media (max-width: 600px) {
