--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -31,7 +31,7 @@
     left: 0;
     width: 50%;
     height: 100%;
-    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0);
     transform: skewX(-26deg);
     transform-origin: bottom left;
     border-radius: 10px;
@@ -50,8 +50,8 @@
 
 .form h2 
 {
-    text-align: center;
     letter-spacing: 1px;
+    text-align: center;
     margin-bottom: 2rem;
     color: gold;
 }
