--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Root Variables */
+
+:root
+{
+    --card-border-radius: 2rem;
+    --border-radius-1: 0.4rem;
+    --border-radius-2: 0.8rem;
+    --border-radius-3: 1.2rem;
+
+    --card-padding: 1.8rem;
+    --padding-1: 1.2rem;
+
+    --bo-shadow: 0 2rem 3rem var(--color-light);
+}
+
 
 
 
@@ -12,6 +27,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-color: black;
+    user-select: none;
+    overflow-x: hidden;
 }
 
 a {
@@ -21,4 +38,7 @@ a {
 
 * {
   box-sizing: border-box;
+  border: 0;
+  text-decoration: none;
+  list-style: none;
 }
