--- a/styles/Admin/Signup.module.css
+++ b/styles/Admin/Signup.module.css
@@ -13,7 +13,9 @@
 .email, 
 .password,
 .passwordConfirm {
-    background-color: black;
+    outline: none;
+    background: none;
+    border: none;
     border-bottom: 2px solid yellow;
     font-size: 24px;
     font-weight: 200;
