--- a/styles/UserInfo.module.css
+++ b/styles/UserInfo.module.css
@@ -42,4 +42,27 @@
     background: none;
     border: none;
 }
-
+.submitBttn{
+    width: 100%;
+    color: black;
+    background-color: rgb(223, 223, 4);
+    border: 1px solid black;
+    padding: 5px;
+    margin-top: 30px;
+    font-size: 25px;
+    font-weight: 200;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+}
+.submitBttn:hover{
+    width: 100%;
+    color: yellow;
+    background-color: black;
+    border: 1px solid yellow;
+    padding: 5px;
+    margin-top: 30px;
+    font-size: 25px;
+    font-weight: 200;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+}
