--- a/styles/Admin/UserInfo.module.css
+++ b/styles/Admin/UserInfo.module.css
@@ -75,3 +75,17 @@
     letter-spacing: 1.5px;
     text-transform: uppercase;
 }
+.loan{
+    border-bottom: 2px solid rgb(255, 255, 0);
+    margin-top: 30px;
+    font-size: 32px;
+    font-weight: 200;
+    color: white;
+    width: 300px;
+
+}
+
+.loan:placeholder{
+    color: white;
+    font-size: 32px;
+}
