--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,8 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-color: black;
     user-select: none;
+    width: 100%;
+    height: 100%;
     overflow-x: hidden;
 }
 
