--- a/styles/Admin/Admin.module.css
+++ b/styles/Admin/Admin.module.css
@@ -1,146 +1,101 @@
 
-.wrapper 
+.formBox
 {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url('/assets/admin/bg.jpeg') no-repeat center;
-    background-size: cover;
-    font-family: sans-serif;
+  background-color: #ca973b;
+  width: 30vw;
+  height: 45vh;
+  padding: 15px;
+  border-radius: 5px;
+  margin-left: 32vw;
+  margin-top: 20vh;
 }
 
-.form 
+.email
 {
-    position: relative;
-    width: 100%;
-    max-width: 380px;
-    padding: 80px 40px 40px;
-    background: rgba(0,0,0,0.7);
-    border-radius: 10px;
-    color: #fff;
-    box-shadow: 0 15px 25px rgba(0,0,0,0.5);
+  background-color: black;
+  width: 20vw;
+  height: 7vh;
+  border-radius: 5px;
+  margin-top: 10vh;
+  margin-left: 4vw;
+  margin-bottom: 3vh;
+  padding: 10px;
+  color: white;
 }
 
-.form::before 
+.password
 {
-    content:'';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0);
-    transform: skewX(-26deg);
-    transform-origin: bottom left;
-    border-radius: 10px;
-    pointer-events: none;
+  background-color: black;
+  width: 20vw;
+  height: 7vh;
+  border-radius: 5px;
+  margin-top: -4vh;
+  margin-left: 4vw;
+  margin-bottom: 3vh;
+  padding: 10px;
+  color: white;
 }
 
-.avatar 
+.login
 {
-    position: absolute;
-    top: -50px;
-    left: calc(50% - 50px);
-    width: 100px;
-    background: rgba(0, 0, 0, 0.8);
-    border-radius: 50%;
+  background-color: black;
+  color: #ca973b;
+  padding: 15px;
+  border-radius: 5px;
+  font-size: 1rem;
+  margin-left: 19vw;
+  display: inline;
+  margin-top: -5vh;
 }
 
-.form h2 
+.resetPass
 {
-    letter-spacing: 1px;
-    text-align: center;
-    margin-bottom: 2rem;
-    color: gold;
+  display: inline;
+  float: left;
+  margin-left: 4vw;
+  font-weight: bold;
 }
 
-.inputGroup 
+.formImg
 {
-    position: relative;
+  width: 7vw;
+  position: absolute;
+  left: 43vw;
+  top: 27vh;
+  background-color: black;
+  border-radius: 50px;
+  border: black 3px solid;
 }
 
-.inputGroup input 
+
+@media screen and (max-width: 479px)
 {
-    width: 100%;
-    padding: 10px 0;
-    font-size: 1rem;
-    letter-spacing: 1px;
-    margin-bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    background-color: transparent;
-    color: inherit;
+  .formBox
+  {
+    width: 75vw;
+    margin-left: 13vw;
   }
 
-  .inputGroup label 
+  .email, .password
   {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 1rem;
-    pointer-events: none;
-    transition: .3s ease-out;
+    width: 55vw;
   }
 
-  .inputGroup input:focus + label,
-  .inputGroup input:valid + label 
+  .login
   {
-    transform: translateY(-18px);
-    color: gold;
-    font-size: .8rem;
+    margin-left: 40vw;
+    margin-top: -3vh;
   }
 
-  .submit 
+  .resetPass
   {
-    display: block;
-    margin-left: auto;
-    border: none;
-    outline: none;
-    background: gold;
-    font-size: 1rem;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  .forgotPass 
-  {
-    color: inherit;
-  }
-  
-  .forgotPass 
-  {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 0;
-    z-index: 1;
-    background: #fff;
-    opacity: 0;
-    transition: 0.6s;
+    font-size: 0.8rem;
   }
 
-  .forgotPass:target 
+  .formImg
   {
-    height: 100%;
-    opacity: 1;
+    width: 20vw;
+    margin-left: -2vw;
   }
-  .close 
-  {
-    position: absolute;
-    right: 1.5rem;
-    top: 0.5rem;
-    font-size: 2rem;
-    font-weight: 900;
-    text-decoration: none;
-    color: inherit;
-  }
+
+}
